[gd_scene load_steps=7 format=2]

[ext_resource path="res://drums/drums.png" type="Texture" id=1]
[ext_resource path="res://sounds/drum_red.ogg" type="AudioStream" id=2]
[ext_resource path="res://sounds/drum_03.ogg" type="AudioStream" id=3]
[ext_resource path="res://drums/drums.gd" type="Script" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 637, 564 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "press"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.98, 0.98 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 637, 566 ), Vector2( 637, 564 ) ]
}

[node name="Drums" type="Node2D"]
position = Vector2( 8.50122, 1.79882 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 637, 564 )
texture = ExtResource( 1 )

[node name="PointA" type="Position2D" parent="."]
position = Vector2( 640, 720 )

[node name="PointB" type="Position2D" parent="."]
position = Vector2( 640, 420 )

[node name="PointC" type="Position2D" parent="."]
position = Vector2( 640, 345 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/press = SubResource( 1 )

[node name="AudioRedL" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 397.77, 609.678 )
stream = ExtResource( 2 )
volume_db = 3.0
pitch_scale = 2.0
attenuation = 2.35
bus = "Drums"

[node name="AudioRedR" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 884.299, 617.28 )
stream = ExtResource( 2 )
volume_db = 3.0
pitch_scale = 2.0
attenuation = 2.35
bus = "Drums"

[node name="AudioBlueL" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 353.493, 419.165 )
stream = ExtResource( 3 )
volume_db = 4.0
pitch_scale = 2.0
attenuation = 2.35
bus = "Drums"

[node name="AudioBlueR" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1006, 419.165 )
stream = ExtResource( 3 )
volume_db = 4.0
pitch_scale = 2.0
attenuation = 2.35
bus = "Drums"
